<resources>
    <string name="app_name">Heal Care</string>
    <string name="Appointments">Appointments</string>
    <string name="QA">Q&amp;A</string>
    <string name="Home">Home</string>
    <string name="Notifications">Notifications</string>
    <string name="Profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
