<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_appointments"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/Appointments"/>

    <item
        android:id="@+id/navigation_qa"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/QA"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Notifications"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/Profile"/>

</menu>